--- a/FamilyRecipes/Pages/Index.cshtml
+++ b/FamilyRecipes/Pages/Index.cshtml
@@ -18,7 +18,7 @@
                     <div class="card1 card-color2 card-shadow_large glass">
                         <div class="f-h3 t-electricblue_pop">
                             <p>Welcome to the Family Recipes</p>
-                            <p>This is the first part of the FamilySystem</p>
+                            <p>This is the first part of the FamilyTools</p>
                             <p>which will get additional modules soon.</p>
                             <p>For now there is the recipe bank which will hold</p>
                             <p>all of your favorite recipes, features in progress</p>
